--- a/.github/workflows/back-test.yml
+++ b/.github/workflows/back-test.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Cd to back-end
       run: cd tasky-back
-    - name: Run a one-line script
+    - name: install npm dependencies
       run: npm install
-    - name: Run a multi-line script
+    - name: test run
       run: npm run dev
