--- a/.github/workflows/back-test.yml
+++ b/.github/workflows/back-test.yml
@@ -8,10 +8,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - working-directory: ./tasky-back
     - name: Ls for sanity
       run: ls
+      working-directory: ./tasky-back
     - name: install npm dependencies
       run: npm install
+      working-directory: ./tasky-back
     - name: test run
       run: npm run dev
+      working-directory: ./tasky-back
