--- a/.github/workflows/back-test.yml
+++ b/.github/workflows/back-test.yml
@@ -14,6 +14,6 @@ jobs:
     - name: install npm dependencies
       run: npm install
       working-directory: ./tasky-back
-    - name: test run
-      run: npm run dev
+    - name: run npm tests
+      run: npm run test
       working-directory: ./tasky-back
