Fixed integration with github actions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,5 +41,6 @@ services:
             - 3000:3000
         networks:
             - tasky-network
+        command: tail -F anything #keeps it running
     #    logging:
     #      driver: "none"
