--- a/.github/workflows/full-stack-test.yml
+++ b/.github/workflows/full-stack-test.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the docker-compose stack
-      run: docker-compose up --build
+      run: docker-compose up --build -d
     - name: Check running containers
       run: docker ps -a
     - name: Run test suite
